<resources>
    <string name="app_name">ujian_network_and_design_patern_farhan_fadhilah</string>
    <string name="daftar">Daftar</string>
    <string name="fullname">Nama panjang</string>
    <string name="text_welcome">Selamat Datang</string>
    <string name="subtitle">Aplikasi Referensi Film</string>
    <string name="text_reference_movies">Referensi Film</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="masuk">Masuk</string>
    <string name="text_question_regis">Belum punya akun?</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text_question_login">Sudah punya akun?</string>
    <string name="login">Login</string>
    <string name="toast_check_form">Form tidak boleh kosong</string>
    <string name="toast_failed_register">Gagal mendaftar</string>
    <string name="toast_succes_register">Form tidak boleh kosong</string>
    <string name="toast_failed_login">Gagal login</string>
    <string name="toast_confirm_password">Konfirmasi password salah</string>
    <string name="toast_user_registered">Pengguna sudah terdaftar</string>
    <string name="toast_wrong_password">Password salah</string>
    <string name="sample_title">Transformer</string>
    <string name="genre_list">Daftar Genre</string>
    <string name="cancel">Batal</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="update">Update</string>
    <string name="recomendation">Rekomendasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>