<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:fontFamily="@font/regular"
                android:textColor="@color/toska"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="40sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_user_default" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                app:backgroundTint="@null"
                app:helperTextTextAppearance="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:backgroundTint="@null"
                app:helperTextTextAppearance="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                app:backgroundTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/confirm_password"
                app:backgroundTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:text="@string/gender"/>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginRight="8dp" />

                <RadioButton
                    android:id="@+id/radioBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/female" />

            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_btn_yellow"
                    android:fontFamily="@font/regular"
                    android:text="@string/daftar"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:id="@+id/ll_to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_register"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:text="@string/text_question_login"
                        android:textColor="@color/toska" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/regular"
                        android:layout_marginStart="4dp"
                        android:text="@string/login"
                        android:textColor="@color/toska"
                        android:textStyle="bold" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>